# profProg

homeworks/homework1.1/src/: Main.java
homeworks/homework2.1/scripts/: compile.ps1  testCases.ps1
homeworks/homework2.2/: README.md
homeworks/homework3.1/: README.md  pom.xml
homeworks/homework3.2/: README.md  pom.xml
homeworks/homework4.1/: README.md  pom.xml
homeworks/homework4.2/: README.md
homeworks/homework5.1/: README.md  pom.xml
practices/practice1.1/: CMakeLists.txt  userStoryA.txt  userStoryB.txt
practices/practice2.1/: CMakeLists.txt  README.md  main.cpp
practices/practice2.2/: CMakeLists.txt  README.md  main.cpp
practices/practice3.1/: CMakeLists.txt
practices/practice3.2/: CMakeLists.txt  README.md
practices/practice4.1/: CMakeLists.txt  README.md  main.cpp
practices/practice4.1/data/: ing.txt
practices/practice4.1/include/: ConcretePizzaBuilder.hpp  Pizza.hpp  PizzaBuilder.hpp  PizzaDirector.hpp  Program.hpp
practices/practice4.1/src/: ConcretePizzaBuilder.cpp  Pizza.cpp  PizzaDirector.cpp  Program.cpp
practices/practice4.1/test/include/: MyTest.hpp
practices/practice4.1/test/src/: ConcretePizzaBuilderTest.cpp  MyTest.cpp  PizzaDirectorTest.cpp  PizzaTest.cpp
practices/practice4.2/: CMakeLists.txt  README.md  main.cpp
practices/practice5.1/: CMakeLists.txt  main.cpp
practices/practice5.2/: CMakeLists.txt  README.md  main.cpp
practices/practice6/: .gitignore  CMakeLists.txt  README.md  main.cpp
practices/practice7/: CMakeLists.txt  main.cpp
practices/practice8/: CMakeLists.txt  main.cpp
(+89 files in other folders)
